# kweeb-logger

./: .gitignore  Cargo.toml
menubar/: go.mod  go.sum  main.go  on_exit_1735938708701580000.txt
src/: app.rs  config.rs  db.rs  logger.rs  macos.rs  main.rs  menubar.rs  metrics.rs  monitor.rs  scroll.rs  supabase.rs  tray.rs
src/tasks/: metrics.rs  monitor.rs
