[package]
name = "kweeb-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "1.1.3"
tray-item = "0.7"
tokio = { version = "1.0", features = ["full"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "migrate"] }
cocoa = "0.25"
core-graphics = "0.23"
objc = "0.2"
display-info = "0.4.8"